--- a/css/latin.css
+++ b/css/latin.css
@@ -1,82 +1,4 @@
 *{
-    padding: none !important;
-    text-align : center !important ; 
-   
-}
-.disclaimer{
-    position:absolute;
-    top: 3700px;
-}
- h6{
-   font-size: xx-large;
-   width: 100%;
-   background-color: rgb(230, 7, 7);
-   border-radius: 10px;
- }
-  body{
-    background-color: rgba(9, 1, 1, 0.984) !important;
-    text-align: center;
-    color: white ;
-      max-height: 300px;
-   
-   
-  }
-h1#CABEZERA {
-    font-size: 10px;
-}
-  select{
-    background-color: black;
-    color: orangered;
-
-  }
-    table {
-border: #f0241d 12px solid;
-}
-
-button{
-  background-color: orangered;
-  color: black  !important;
-  width: 20%;
-  border-radius: 10px;
-}
-a{
-  color: rgb(226, 213, 213);
-  text-decoration: none;
-}
-.container{
-background-color: black ;
-}
-#CABEZERA{
-    width: 100%;
-    color: orangered;
-    background-color: rgb(55, 50, 50);
-}
-
-#libro1{
-    position: absolute;
-    top: 123px ;
-    left: 8px;
-}
-#libro2{
-    position: absolute;
-    top: 123px ;
-    right: 8px;
-}
-#texto1{
-    position: absolute;
-    top: 70px ;
-    left: 8px;
-}
-#texto2{
-    position: absolute;
-    top: 70px ;
-    right: 8px;
-}
-
-#aeonmerx{
-    height: 600px;
-background-color: rgb(117, 101, 101);
-width: auto
-;
+    color: orange;
 }
 
